// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BIMDataNavigation should render BIMDataButton disabled 1`] = `
"<ul class=\\"bimdata-list bimdata-navigation\\">
  <!---->
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" disabled=\\"true\\" class=\\"disabled\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-double-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" disabled=\\"true\\" class=\\"disabled\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li></li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" disabled=\\"true\\" class=\\"disabled\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" disabled=\\"true\\" class=\\"disabled\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <!---->
</ul>"
`;

exports[`BIMDataNavigation should render a navigation with a left slot and match snapshot 1`] = `
"<ul class=\\"bimdata-list bimdata-navigation\\">
  <li><span>left slot</span></li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-double-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li></li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <!---->
</ul>"
`;

exports[`BIMDataNavigation should render a navigation with a right slot and match snapshot 1`] = `
"<ul class=\\"bimdata-list bimdata-navigation\\">
  <!---->
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-double-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li></li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li><span>right slot</span></li>
</ul>"
`;

exports[`BIMDataNavigation should render component and match snapshot 1`] = `
"<ul class=\\"bimdata-list bimdata-navigation\\">
  <!---->
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-double-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\" class=\\"icon-chevron-left\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li></li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"chevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <li class=\\"bimdata-navigation__item\\">
    <bimdatabutton-stub width=\\"21px\\" height=\\"21px\\" ghost=\\"true\\" color=\\"default\\" class=\\"\\">
      <bimdataicon-stub name=\\"doubleChevron\\" color=\\"currentColor\\" size=\\"xxxs\\" rotate=\\"0\\"></bimdataicon-stub>
    </bimdatabutton-stub>
  </li>
  <!---->
</ul>"
`;
